[project]
name = "exporter"
version = "0.1.0"
description = "Prometheus exporter for Supra blockchain RPC and Validator metrics"
authors = [
  { name = "Abhinav Taneja", email = "at@blocksize-capital.com" },
  { name = "Axel Lode", email = "al@blocksize-capital.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "prometheus-client>=0.21.0,<0.22.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.31.0,<3.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["exporter"]

[tool.coverage.report]
omit = ["*/__init__.py"]
show_missing = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
ruff = "^0.11.11"
mypy = "^1.15.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["__pycache__", ".venv", "build", "dist"]
extend-select = ["I", "N", "B", "C4", "ERA", "F", "TID", "UP"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D100",  # missing docstring in public module
  "D104",  # missing docstring in public package
  "ANN101", "ANN102",  # self/cls type annotations
  "T201",  # allow print statements for now
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true

