[project]
name = "supraexporter"
version = "0.1.0"
description = "Prometheus exporter for Supra blockchain RPC and Validator metrics"
authors = [
  { name = "Abhinav Taneja", email = "at@blocksize-capital.com" },
  { name = "Axel Lode", email = "al@blocksize-capital.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
package-mode = "false"
dependencies = [
  "prometheus-client>=0.21.0,<0.22.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "requests>=2.31.0,<3.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["supraexporter"]

[tool.coverage.report]
omit = ["*/__init__.py"]
show_missing = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"
pre-commit = "^4.2.0"
pydocstyle = "^6.3.0"

[tool.black]
line-length = 100
target-version = ["py312"]


[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
#exclude = "(venv|\\.venv|tests)"


[tool.autoflake]
profile = "black"
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true

[tool.autopep8]
max_line_length = 100
profile = "black"
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "supraexporter/tests"
]
addopts = "--ignore=venv --ignore=.venv --disable-warnings --cov=supraexporter --cov-fail-under=40"
